--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "y",
+  "name": "business-trips",
   "version": "1.0.0",
-  "description": "test asigment",
-  "main": "y",
+  "description": "",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
